# forge-eval

./: AUDIT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
doc/: EPOSYSTEM.md  FEVSYSTEM.md
doc/system/: 90-appendices.md  BUILD.sh  _index.md  validate_snapshots.sh
doc/system/00_overview/: 01-overview-philosophy.md  02-architecture.md  04-project-structure.md
doc/system/10_service-contract/: 05-cli-config-artifacts.md
doc/system/20_runtime/: 06-evidence-subsystem.md  07-risk-heatmap-stage.md  08-context-slices-stage.md  09-schemas-validation-errors.md  12-reviewer-execution-stage.md  13-telemetry-matrix-stage.md  14-occupancy-snapshot-stage.md  15-capture-estimate-stage.md  16-hazard-map-stage.md  17-merge-decision-stage.md  18-evidence-bundle-stage.md  19-localization-pack-stage.md
doc/system/30_dependencies/: 03-tech-stack.md
doc/system/50_operations/: 10-testing-determinism.md  11-handover-runbook.md
rust/forge-evidence/src/: canonical.rs  chain.rs  main.rs
rust/forge-evidence/tests/: integration_cli.rs
src/forge_eval/: centipede_runner.py  cli.py  config.py  errors.py  evidence_cli.py  stage_runner.py
src/forge_eval/adapters/: centipede_input.py
src/forge_eval/contracts/: evaluation_spine.py
src/forge_eval/lineage/: __init__.py  emitter.py  run_emit.py
src/forge_eval/reviewers/: adapters.py  base.py  changed_lines.py  documentation_consistency.py  registry.py  structural_risk.py
src/forge_eval/services/: applicability.py  capture_counts.py  capture_selection.py  capture_summary.py  construct_extractor.py  evidence_bundle_manifest.py  evidence_bundle_model.py  evidence_bundle_summary.py  finding_normalizer.py  git_diff.py  hazard_model.py  hazard_rows.py  hazard_summary.py  ice.py  localization_ranker.py  merge_decision_model.py  merge_decision_reasons.py  merge_decision_summary.py  occupancy_model.py  occupancy_priors.py  occupancy_rows.py  occupancy_summary.py  patch_scope_builder.py  range_ops.py  review_scope_compiler.py  reviewer_health.py  risk_analysis.py  slice_extractor.py  telemetry_builder.py
src/forge_eval/stages/: capture_estimate.py  context_slices.py  evidence_bundle.py  hazard_map.py  localization_pack.py  merge_decision.py  occupancy_snapshot.py  reviewer_execution.py  risk_heatmap.py  telemetry_matrix.py
src/forge_eval/validation/: schema_loader.py  validate_artifact.py
tests/: _evidence_test_helper.py  test_capture_estimate_stage.py  test_centipede_integration.py  test_cli.py  test_config.py  test_construct_extraction.py  test_evidence_bundle_stage.py  test_evidence_cli.py  test_finding_normalizer.py  test_hazard_map_stage.py  test_localization_e2e.py  test_localization_pack_stage.py  test_localization_ranking.py  test_merge_decision_stage.py  test_reviewer_execution_stage.py  test_schemas.py  test_slice_extractor.py  test_telemetry_matrix_stage.py
tests/integration/: test_context_slices_repo.py  test_review_findings_repo.py  test_risk_heatmap_repo.py
tests/lineage/: test_centipede_lineage_optin.py  test_emitter_artifact_ref.py  test_forge_eval_emitter.py  test_stage_runner_lineage_optin.py
