[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-eval"
version = "0.1.0"
description = "Deterministic fail-closed Forge eval loop foundation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.10.3",
  "PyYAML>=6.0.1",
]

[project.scripts]
forge-eval = "forge_eval.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
pythonpath = ["src"]
markers = [
  "integration: integration tests",
]

[tool.mypy]
python_version = "3.12"
files = ["src"]

# External ecosystem packages and un-stubbed third-party libraries are resolved
# at runtime, not type-checked here.
[[tool.mypy.overrides]]
module = [
  "yaml",
  "jsonschema",
  "forge_contract_core.*",
  "forge_lineage_sdk",
  "forge_lineage_sdk.*",
]
ignore_missing_imports = true
