[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-eval"
version = "0.1.0"
description = "Deterministic fail-closed Forge eval loop foundation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.10.3",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
# Test/lint toolchain used by the suite and CI.
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
]
# forge_lineage_sdk is provided by the surrounding ecosystem checkout (local
# editable install), not PyPI; declared here to document the lineage extra.
lineage = [
  "forge-lineage-sdk",
]

[project.scripts]
forge-eval = "forge_eval.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# Explicit rule set (previously implicit defaults): pycodestyle errors/warnings,
# Pyflakes, and import sorting. Keeps the lint gate reproducible.
select = ["E", "F", "W", "I"]
# `ruff format` owns line length; E501 only fights it on long comments/strings.
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
pythonpath = ["src", "."]
markers = [
  "integration: integration tests",
]
